<resources>
    <string name="app_name">Platin Casino Tipps</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_policy_text">Matvej online apps built the Platin Casino Tipps app as a Free app. This SERVICE is provided by Matvej online apps at no cost and is intended for use as is.
\n
\nThis page is used to inform visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.
\n
\nIf you choose to use my Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that I collect is used for providing and improving the Service. I will not use or share your information with anyone except as described in this Privacy Policy.
\n
\nThe terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which are accessible at Platin Casino Tipps unless otherwise defined in this Privacy Policy.
\n
Information Collection and Use
\n
\nFor a better experience, while using our Service, I may require you to provide us with certain personally identifiable information, including but not limited to idfa, device id, advertising identificator. The information that I request will be retained on your device and is not collected by me in any way.
\n
\nThe app does use third-party services that may collect information used to identify you.
\n
\nLink to the privacy policy of third-party service providers used by the app
\n
\n\t• Google Play Services
\n\t• Google Analytics for Firebase
\n\t• Firebase Crashlytics
\n\t• One Signal
\n
\nLog Data
\n
\nI want to inform you that whenever you use my Service, in a case of an error in the app I collect data and information (through third-party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing my Service, the time and date of your use of the Service, and other statistics.
\n
\nCookies
\n
\nCookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These are sent to your browser from the websites that you visit and are stored on your device\'s internal memory.
\n
\nThis Service does not use these “cookies” explicitly. However, the app may use third-party code and libraries that use “cookies” to collect information and improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this Service.
\n
\nService Providers
\n
\nI may employ third-party companies and individuals due to the following reasons:
\n
\n\t• To facilitate our Service;
\n\t• To provide the Service on our behalf;
\n\t• To perform Service-related services; or
\n\t• To assist us in analyzing how our Service is used.
\n
\nI want to inform users of this Service that these third parties have access to their Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.
\n
\nSecurity
\n
\nI value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and I cannot guarantee its absolute security.
\n
\nLinks to Other Sites
\n
\nThis Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by me. Therefore, I strongly advise you to review the Privacy Policy of these websites. I have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.
\n
\nChildren’s Privacy
\n
\nThese Services do not address anyone under the age of 13. I do not knowingly collect personally identifiable information from children under 13 years of age. In the case I discover that a child under 13 has provided me with personal information, I immediately delete this from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact me so that I will be able to do the necessary actions.
\n
\nChanges to This Privacy Policy
\n
\nI may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. I will notify you of any changes by posting the new Privacy Policy on this page.
\n
\nThis policy is effective as of 2023-09-13
\n
\nContact Us
\n
\nIf you have any questions or suggestions about my Privacy Policy, do not hesitate to contact me at vitmatveev2000@gmail.com.
\n
\nThis privacy policy page was created at privacypolicytemplate.net and modified/generated by App Privacy Policy Generator</string>
    <string name="nachrichten_aktuelles"><![CDATA[Nachrichten & Aktuelles]]></string>
    <string name="nachrichten_and_aktuelles_d">Nachrichten and Aktuelles</string>
    <string name="hudo_legacy_d">Hudo legacy</string>
    <string name="mehr_erfahren_d">Mehr erfahren</string>
    <string name="top_spielautomaten">Top spielautomaten</string>
    <string name="top_spielautomaten_d">Top spielautomaten</string>
    <string name="banner_d">Banner</string>
    <string name="game">GAME!!!</string>
    <string name="one_signal_id">3083b3f7–f4f9–47bb–863d–9eefb8c6bb95</string>
</resources>