<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/top_bar"
        layout="@layout/top_elements"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/hudo_legacy"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/hudo_legacy_d"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_bar"
        app:srcCompat="@drawable/hugo_legacy"/>

    <ImageView
        android:layout_width="110dp"
        android:layout_height="27dp"
        app:layout_constraintBottom_toBottomOf="@+id/hudo_legacy"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="15dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/hugo_legacy_b"
        tools:ignore="ContentDescription"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="29dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hudo_legacy">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/news_and_affairs_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:fontFamily="@font/inder"
                    android:text="@string/nachrichten_aktuelles"
                    android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/news_and_affairs_ib"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="10dp"
                    app:layout_constraintDimensionRatio="1.54"
                    android:layout_marginHorizontal="20dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/nachrichten_and_aktuelles_d"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/news_and_affairs_text"
                    app:srcCompat="@drawable/news_and_affairs_banner" />

                <ImageButton
                    android:id="@+id/news_and_affairs_learn_more_ib"
                    android:layout_width="165dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/mehr_erfahren_d"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/news_and_affairs_ib"
                    app:srcCompat="@drawable/learn_more_b" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingBottom="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/top_slot_machines_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:fontFamily="@font/inder"
                    android:text="@string/top_spielautomaten"
                    android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/top_slot_machines_ib"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="10dp"
                    app:layout_constraintDimensionRatio="1.735"
                    android:layout_marginHorizontal="20dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/top_spielautomaten_d"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/top_slot_machines_text"
                    app:srcCompat="@drawable/top_slots_machines_banner" />

                <ImageButton
                    android:id="@+id/top_slot_machines_learn_more_ib"
                    android:layout_width="165dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/mehr_erfahren_d"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/top_slot_machines_ib"
                    app:srcCompat="@drawable/learn_more_b" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>